# hototogisudb

./: .env.example  .gitattributes  .gitignore  2026-04-06-goose.md  CLAUDE.md  CLAUDE.md.orig  CODE_OVERVIEW.md  README.md  cliff.toml  pyproject.toml
.claude/: settings.local.json
.github/: CLAUDE.md  copilot-instructions.md
.github/workflows/: ci.yml  export_mozc_dict.yml  import_ssk_master.yml  supabase_keepalive.yml  update_changelog.yml
docs/superpowers/plans/: 2026-03-29-mozc4med-db.md  2026-04-03-add-upsert-custom-terms-rpc.md
mozc4med_dict/: CLAUDE.md  db.py  models.py
mozc4med_dict/exporters/: mozc_system_dict.py
mozc4med_dict/importers/: base.py  csv_generic.py  ssk_iyakuhin.py  ssk_shinryo_koi.py  ssk_shobyomei.py
mozc4med_dict/utils/: download.py  kana.py
schema/migrations/: 003_create_ssk_shinryo_koi.sql  006_create_custom_terms.sql
scripts/: export_mozc_dict.py  find_invalid_normalization.py  import_csv.py  import_iyakuhin.py  import_shinryo_koi.py  import_shobyomei.py  initial.sh  manage_dict_enabled.py  supabase_keepalive.py
supabase/: CLAUDE.md
supabase/migrations/: 20260101000001_create_pos_types.sql  20260101000002_create_import_batches.sql  20260101000004_create_ssk_iyakuhin.sql  20260101000005_create_ssk_shobyomei.sql  20260101000007_create_upsert_rpcs.sql  20260101000008_create_export_rpc.sql  20260101000009_create_upsert_custom_terms.sql
tests/: CLAUDE.md  test_exporters.py  test_importers.py
tests/integration/: conftest.py  test_export_pipeline.py  test_import_iyakuhin.py  test_import_shinryo_koi.py  test_import_shobyomei.py  test_sha256_dedup.py  test_upsert_no_overwrite_dict_enabled.py
tests/unit/: test_csv_generic.py  test_download.py  test_importer_base.py  test_kana.py  test_manage_dict_enabled.py  test_mozc_exporter.py  test_ssk_iyakuhin.py  test_ssk_shinryo_koi.py  test_ssk_shobyomei.py
