[project]
name = "mozc4med-dict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "alphabet2kana>=1.0",   # ASCII [a-z][A-Z] → katakana ("DX" → "ディーエックス")
    "jaconv>=0.3",          # Kana conversion: hankaku→zenkaku, kata→hira
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
mozc4med-import-shinryo-koi = "scripts.import_shinryo_koi:main"
mozc4med-import-iyakuhin    = "scripts.import_iyakuhin:main"
mozc4med-import-shobyomei   = "scripts.import_shobyomei:main"
mozc4med-import-csv         = "scripts.import_csv:main"
mozc4med-export             = "scripts.export_mozc_dict:main"
mozc4med-keepalive          = "scripts.supabase_keepalive:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mozc4med_dict*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
